<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.RegistrationActivity">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:columnCount="2"
        android:rowCount="12">
        <TextView
            style="@style/TitleText"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="2"
            android:text="@string/registration" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2">
            <EditText
                android:id="@+id/fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fio"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:layout_column="0">
            <EditText
                android:id="@+id/login_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_r"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_column="0">
            <EditText
                android:id="@+id/password_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:hint="@string/password_r"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/faculties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            />


        <Spinner
            android:id="@+id/directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
           />

        <Spinner
            android:id="@+id/groups"
            android:layout_width="211dp"
            android:layout_height="36dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="2" />

        <EditText
            android:id="@+id/text_spinner_groups"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="2">

        </EditText>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="нет группы"
            android:layout_gravity="right"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:layout_column="0">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_row="8"
            android:layout_column="0">
            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/buttonReg"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/buttonN"
            android:textColor="#fff"
            />

    </GridLayout>


</LinearLayout>
</ScrollView>